fix for next container on Safari

--- a/modules/ui/src/components/Page/Page.css
+++ b/modules/ui/src/components/Page/Page.css
@@ -1,4 +1,5 @@
-body {
+body,
+#__next {
   position: fixed;
   overflow: hidden;
   width: 100%;
@@ -10,7 +11,7 @@ body {
 
 .pageContainer {
   width: 100%;
-  max-height: 800px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -18,6 +19,7 @@ body {
 @media (min-width: 450px) {
   .pageContainer {
     width: 450px;
+    max-height: 800px;
   }
 }
 
